--- a/test-explorer/v2x_net452_FSharp/v2x_net452_FSharp.fsproj
+++ b/test-explorer/v2x_net452_FSharp/v2x_net452_FSharp.fsproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\xunit.core.2.3.0-beta2-build3679\build\xunit.core.props" Condition="Exists('..\packages\xunit.core.2.3.0-beta2-build3679\build\xunit.core.props')" />
+  <Import Project="..\packages\xunit.core.2.3.0-beta2-build3681\build\xunit.core.props" Condition="Exists('..\packages\xunit.core.2.3.0-beta2-build3681\build\xunit.core.props')" />
   <Import Project="..\packages\xunit.runner.visualstudio.2.3.0-beta2-build1316\build\net20\xunit.runner.visualstudio.props" Condition="Exists('..\packages\xunit.runner.visualstudio.2.3.0-beta2-build1316\build\net20\xunit.runner.visualstudio.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -55,6 +55,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
     <Reference Include="xunit.abstractions">
@@ -62,16 +63,19 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="xunit.assert">
-      <HintPath>..\packages\xunit.assert.2.3.0-beta2-build3679\lib\netstandard1.1\xunit.assert.dll</HintPath>
+      <HintPath>..\packages\xunit.assert.2.3.0-beta2-build3681\lib\netstandard1.1\xunit.assert.dll</HintPath>
     </Reference>
     <Reference Include="xunit.assert" />
+    <Reference Include="xunit.assert" />
     <Reference Include="xunit.core">
-      <HintPath>..\packages\xunit.extensibility.core.2.3.0-beta2-build3679\lib\netstandard1.1\xunit.core.dll</HintPath>
+      <HintPath>..\packages\xunit.extensibility.core.2.3.0-beta2-build3681\lib\netstandard1.1\xunit.core.dll</HintPath>
     </Reference>
     <Reference Include="xunit.core" />
+    <Reference Include="xunit.core" />
     <Reference Include="xunit.execution.desktop">
-      <HintPath>..\packages\xunit.extensibility.execution.2.3.0-beta2-build3679\lib\net452\xunit.execution.desktop.dll</HintPath>
+      <HintPath>..\packages\xunit.extensibility.execution.2.3.0-beta2-build3681\lib\net452\xunit.execution.desktop.dll</HintPath>
     </Reference>
+    <Reference Include="xunit.execution.desktop" />
     <Reference Include="xunit.execution.desktop" />
   </ItemGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
@@ -79,10 +83,10 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\xunit.runner.visualstudio.2.3.0-beta2-build1316\build\net20\xunit.runner.visualstudio.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\xunit.runner.visualstudio.2.3.0-beta2-build1316\build\net20\xunit.runner.visualstudio.props'))" />
-    <Error Condition="!Exists('..\packages\xunit.core.2.3.0-beta2-build3679\build\xunit.core.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\xunit.core.2.3.0-beta2-build3679\build\xunit.core.props'))" />
-    <Error Condition="!Exists('..\packages\xunit.core.2.3.0-beta2-build3679\build\xunit.core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\xunit.core.2.3.0-beta2-build3679\build\xunit.core.targets'))" />
+    <Error Condition="!Exists('..\packages\xunit.core.2.3.0-beta2-build3681\build\xunit.core.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\xunit.core.2.3.0-beta2-build3681\build\xunit.core.props'))" />
+    <Error Condition="!Exists('..\packages\xunit.core.2.3.0-beta2-build3681\build\xunit.core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\xunit.core.2.3.0-beta2-build3681\build\xunit.core.targets'))" />
   </Target>
-  <Import Project="..\packages\xunit.core.2.3.0-beta2-build3679\build\xunit.core.targets" Condition="Exists('..\packages\xunit.core.2.3.0-beta2-build3679\build\xunit.core.targets')" />
+  <Import Project="..\packages\xunit.core.2.3.0-beta2-build3681\build\xunit.core.targets" Condition="Exists('..\packages\xunit.core.2.3.0-beta2-build3681\build\xunit.core.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
