--- a/dotnet-xunit/v2x_MultiTarget_DotNetSdk.csproj
+++ b/dotnet-xunit/v2x_MultiTarget_DotNetSdk.csproj
@@ -5,8 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.3.0-beta2-build3679" />
-    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0-beta2-build3679" />
+    <PackageReference Include="xunit" Version="2.3.0-beta2-build3683" />
+    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0-beta2-build3683" />
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
+    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
   <ItemGroup>
