--- a/test-explorer/v2x_net452_ReferencingProject/v2x_net452_ReferencingProject.csproj
+++ b/test-explorer/v2x_net452_ReferencingProject/v2x_net452_ReferencingProject.csproj
@@ -49,6 +49,11 @@
       <Name>v2x_net452</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="xunit.runner.visualstudio">
+      <Version>2.3.0-beta3-build3705</Version>
+    </PackageReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
