--- a/test-explorer/v2x_net452_ReferencingProject/v2x_net452_ReferencingProject.csproj
+++ b/test-explorer/v2x_net452_ReferencingProject/v2x_net452_ReferencingProject.csproj
@@ -54,6 +54,9 @@
       <Version>2.3.0-beta3-build3705</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
