--- a/test-explorer/v2x_net452_ReferencingProject/v2x_net452_ReferencingProject.csproj
+++ b/test-explorer/v2x_net452_ReferencingProject/v2x_net452_ReferencingProject.csproj
@@ -50,9 +50,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="xunit.runner.visualstudio">
-      <Version>2.3.0-beta3-build3705</Version>
-    </PackageReference>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
