--- a/dotnet-xunit/v2x_MultiTarget_DotNetSdk.csproj
+++ b/dotnet-xunit/v2x_MultiTarget_DotNetSdk.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net452;netcoreapp1.0;netcoreapp1.1</TargetFrameworks>
+    <TargetFrameworks>net452;netcoreapp1.0;netcoreapp1.1;netcoreapp2.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.3.0-beta3-build3705" />
-    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0-beta3-build3705" />
+    <PackageReference Include="xunit" Version="2.3.0-beta4-build3741" />
+    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0-beta4-build3741" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
