--- a/NuGet.Config
+++ b/NuGet.Config
@@ -2,8 +2,8 @@
 <configuration>
   <packageSources>
     <clear/>
-    <add key="CI Builds (xunit)" value="https://www.myget.org/F/xunit/" />
-    <add key="CI Builds (xamarin.xunit)" value="https://www.myget.org/F/xunit-xamarin/" />
+    <add key="CI Builds (xunit)" value="https://www.myget.org/F/xunit/api/v3/index.json" protocolVersion="3" />
+    <add key="CI Builds (xamarin.xunit)" value="https://www.myget.org/F/xunit-xamarin/api/v3/index.json" protocolVersion="3" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
   </packageSources>
   <disabledPackageSources>
