dotnet-xunit: update to 2.3.0-rc1-build3795

--- a/dotnet-xunit/v2x_MultiTarget_DotNetSdk.csproj
+++ b/dotnet-xunit/v2x_MultiTarget_DotNetSdk.csproj
@@ -5,16 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.3.0-beta5-build3769" />
-    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0-beta5-build3769" />
+    <PackageReference Include="xunit" Version="2.3.0-rc1-build3795" />
+    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0-rc1-build3795" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
     <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
   </ItemGroup>
 
 </Project>
