--- a/msbuild/v2x_net452_Sdk/v2x_net452_Sdk.csproj
+++ b/msbuild/v2x_net452_Sdk/v2x_net452_Sdk.csproj
@@ -5,8 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.3.0-beta5-build3769" />
-    <PackageReference Include="xunit.runner.msbuild" Version="2.3.0-beta5-build3769" />
+    <PackageReference Include="xunit" Version="2.3.0-rc1-build3795" />
+    <PackageReference Include="xunit.runner.msbuild" Version="2.3.0-rc1-build3795" />
   </ItemGroup>
+
+  <Target Name="Test" AfterTargets="Build">
+    <xunit Assemblies="$(TargetPath)" />
+  </Target>
 
 </Project>
