--- a/test-explorer/v1_net20/packages.config
+++ b/test-explorer/v1_net20/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="xunit" version="1.9.2" targetFramework="net2" />
   <package id="xunit.extensions" version="1.9.2" targetFramework="net2" />
-  <package id="xunit.runner.visualstudio" version="2.3.0-beta5-build3769" targetFramework="net20" developmentDependency="true" />
+  <package id="xunit.runner.visualstudio" version="2.3.0-rc1-build3795" targetFramework="net20" developmentDependency="true" />
 </packages>
