--- a/test-explorer/v1_net45/packages.config
+++ b/test-explorer/v1_net45/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="xunit" version="1.9.2" targetFramework="net45" />
   <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
-  <package id="xunit.runner.visualstudio" version="2.3.0-beta5-build3769" targetFramework="net45" developmentDependency="true" />
+  <package id="xunit.runner.visualstudio" version="2.3.0-rc1-build3795" targetFramework="net45" developmentDependency="true" />
 </packages>
