--- a/msbuild/v2x_net452/v2x_net452.csproj
+++ b/msbuild/v2x_net452/v2x_net452.csproj
@@ -31,8 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.3.0-rc1-build3809" />
-    <PackageReference Include="xunit.runner.msbuild" Version="2.3.0-rc1-build3809" />
+    <PackageReference Include="xunit" Version="2.3.0-rc3-build3818" />
+    <PackageReference Include="xunit.runner.msbuild" Version="2.3.0-rc3-build3818" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -47,6 +47,9 @@
   <ItemGroup>
     <Compile Include="BasicTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="Test" AfterTargets="Build">
