--- a/NuGet.Config
+++ b/NuGet.Config
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <clear/>
-    <add key="CI Builds (xunit)" value="https://www.myget.org/F/xunit/api/v3/index.json" protocolVersion="3" />
-    <add key="CI Builds (xamarin.xunit)" value="https://www.myget.org/F/xunit-xamarin/api/v3/index.json" protocolVersion="3" />
-    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+    <add key="myget.org/F/xunit" value="https://www.myget.org/F/xunit/api/v3/index.json" protocolVersion="3" />
+    <add key="myget.org/F/xunit-xamarin" value="https://www.myget.org/F/xunit-xamarin/api/v3/index.json" protocolVersion="3" />
   </packageSources>
-  <disabledPackageSources>
-    <add key="Microsoft and .NET" value="true" />
-  </disabledPackageSources>
 </configuration>
