--- a/dotnet-xunit/v2x_MultiTarget_DotNetSdk.csproj
+++ b/dotnet-xunit/v2x_MultiTarget_DotNetSdk.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.3.0-rc3-build3818" />
-    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0-rc3-build3818" />
+    <PackageReference Include="xunit" Version="2.3.0" />
+    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.0" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
