--- a/test-explorer/NUnit_and_v2x/NUnit_and_v2x.csproj
+++ b/test-explorer/NUnit_and_v2x/NUnit_and_v2x.csproj
@@ -32,8 +32,8 @@
   <ItemGroup>
     <PackageReference Include="NUnit" Version="2.6.4" />
     <PackageReference Include="NUnitTestAdapter" Version="1.2" />
-    <PackageReference Include="xunit" Version="2.3.0-rc3-build3818" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.0-rc3-build3818" />
+    <PackageReference Include="xunit" Version="2.3.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.0" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
