--- a/test-explorer/v2x_net452/v2x_net452.csproj
+++ b/test-explorer/v2x_net452/v2x_net452.csproj
@@ -32,8 +32,8 @@
     <CodeAnalysisRuleSet>v2x_net452.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.3.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <PackageReference Include="xunit" Version="2.4.0-beta.2.build3981" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0-beta.2.build3981" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
