--- a/msbuild/v2x_net452/v2x_net452.csproj
+++ b/msbuild/v2x_net452/v2x_net452.csproj
@@ -31,8 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.3.1" />
-    <PackageReference Include="xunit.runner.msbuild" Version="2.3.1" />
+    <PackageReference Include="xunit" Version="2.4.0-beta.2.build4009" />
+    <PackageReference Include="xunit.runner.msbuild" Version="2.4.0-beta.2.build4009" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
