--- a/test-explorer/v1_net20/v1_net20.csproj
+++ b/test-explorer/v1_net20/v1_net20.csproj
@@ -31,7 +31,7 @@
   <ItemGroup>
     <PackageReference Include="xunit" Version="1.9.2" />
     <PackageReference Include="xunit.extensions" Version="1.9.2" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0-beta.2.build4009" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
