--- a/test-explorer/v21_net45/v21_net45.csproj
+++ b/test-explorer/v21_net45/v21_net45.csproj
@@ -30,7 +30,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="xunit" Version="2.1.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0-beta.2.build4009" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
