--- a/console/v2x_net452_Sdk/v2x_net452_Sdk.csproj
+++ b/console/v2x_net452_Sdk/v2x_net452_Sdk.csproj
@@ -5,8 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.4.0-beta.2.build4009" />
-    <PackageReference Include="xunit.runner.console" Version="2.4.0-beta.2.build4009" />
+    <PackageReference Include="xunit" Version="2.4.0-rc.1.build4038" />
+    <PackageReference Include="xunit.runner.console" Version="2.4.0-rc.1.build4038" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <Target Name="Test" AfterTargets="Build">
