--- a/test-explorer/v1x_net20/v1x_net20.csproj
+++ b/test-explorer/v1x_net20/v1x_net20.csproj
@@ -31,7 +31,7 @@
   <ItemGroup>
     <PackageReference Include="xunit" Version="1.9.2" />
     <PackageReference Include="xunit.extensions" Version="1.9.2" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0-beta.2.build4009" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0-rc.1.build4038" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -42,9 +42,9 @@
     <Compile Include="BasicTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="xunit.runner.json">
+    <Content Include="xunit.runner.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
