--- a/test-explorer/v2x_net452_FSharp/v2x_net452_FSharp.fsproj
+++ b/test-explorer/v2x_net452_FSharp/v2x_net452_FSharp.fsproj
@@ -9,14 +9,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="xunit.runner.json">
+    <Content Include="xunit.runner.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.4.0-beta.2.build4009" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0-beta.2.build4009" />
+    <PackageReference Include="xunit" Version="2.4.0-rc.1.build4038" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0-rc.1.build4038" />
   </ItemGroup>
 
 </Project>
