--- a/test-explorer/v2x_netcoreapp2.1/v2x_netcoreapp2.1.csproj
+++ b/test-explorer/v2x_netcoreapp2.1/v2x_netcoreapp2.1.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="xunit.runner.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="xunit.runner.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -12,8 +16,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
-    <PackageReference Include="xunit" Version="2.4.0-beta.2.build4009" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0-beta.2.build4009" />
+    <PackageReference Include="xunit" Version="2.4.0-rc.1.build4038" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0-rc.1.build4038" />
   </ItemGroup>
 
 </Project>
