--- a/test-explorer/v2x_net452_Sdk/v2x_net452_Sdk.csproj
+++ b/test-explorer/v2x_net452_Sdk/v2x_net452_Sdk.csproj
@@ -15,8 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.4.1-pre.build.4071" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1-pre.build.4071">
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
