Update to xunit 2.4.1-pre.12 and xunit.analyzers to 0.12.0-pre.19

--- a/test-explorer/v2x_UWP/v2x_UWP.csproj
+++ b/test-explorer/v2x_UWP/v2x_UWP.csproj
@@ -19,9 +19,10 @@
     <PackageCertificateKeyFile>v2x_UWP_TemporaryKey.pfx</PackageCertificateKeyFile>
     <UnitTestPlatformVersion Condition="'$(UnitTestPlatformVersion)' == ''">15.5</UnitTestPlatformVersion>
     <EnableDotNetNativeCompatibleProfile>true</EnableDotNetNativeCompatibleProfile>
-    <PackageCertificateThumbprint>D4320C3073A89E44A9E390D8DF33CA79A4F4D518</PackageCertificateThumbprint>
+    <PackageCertificateThumbprint>8FF15031B5128CCA01277B2A09488FFBDA6B4A26</PackageCertificateThumbprint>
     <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
     <GenerateBindingRedirectsOutputType>false</GenerateBindingRedirectsOutputType>
+    <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <DebugSymbols>true</DebugSymbols>
@@ -136,10 +137,10 @@
       <Version>6.1.4</Version>
     </PackageReference>
     <PackageReference Include="xunit">
-      <Version>2.4.1</Version>
+      <Version>2.4.2-pre.12</Version>
     </PackageReference>
     <PackageReference Include="xunit.runner.visualstudio">
-      <Version>2.4.1</Version>
+      <Version>2.4.3</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
