--- a/analyzers/CoreExtensibility/CoreExtensibility.csproj
+++ b/analyzers/CoreExtensibility/CoreExtensibility.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit.analyzers" Version="0.12.0-pre.16" />
-    <PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
+    <PackageReference Include="xunit.analyzers" Version="0.12.0-pre.19" />
+    <PackageReference Include="xunit.extensibility.core" Version="2.4.2-pre.12" />
   </ItemGroup>
 
 </Project>
