--- a/analyzers/FullXunit/FullXunit.csproj
+++ b/analyzers/FullXunit/FullXunit.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.analyzers" Version="0.12.0-pre.16" />
+    <PackageReference Include="xunit" Version="2.4.2-pre.12" />
+    <PackageReference Include="xunit.analyzers" Version="0.12.0-pre.19" />
   </ItemGroup>
 
 </Project>
