--- a/msbuild/v2x_net452_Sdk/v2x_net452_Sdk.csproj
+++ b/msbuild/v2x_net452_Sdk/v2x_net452_Sdk.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.msbuild" Version="2.4.1">
+    <PackageReference Include="xunit" Version="2.4.2-pre.12" />
+    <PackageReference Include="xunit.runner.msbuild" Version="2.4.2-pre.12">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
