--- a/test-explorer/v2x_net462/v2x_net462.csproj
+++ b/test-explorer/v2x_net462/v2x_net462.csproj
@@ -8,14 +8,12 @@
     <Content Include="..\xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
+
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="3.0.3" />
-    <PackageReference Include="MSTest.TestFramework" Version="3.0.3" />
     <PackageReference Include="xunit" Version="2.5.0-pre.22" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.0-pre.15">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
   </ItemGroup>
 
