--- a/analyzers/v2-abstractions/v2-abstractions.csproj
+++ b/analyzers/v2-abstractions/v2-abstractions.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="..\v2-full\3xxx_Extensibility\*.cs" LinkBase="3xxx_Extensibility" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="xunit.abstractions" Version="2.0.3" />
     <PackageReference Include="xunit.analyzers" Version="1.2.0-pre.9" />
   </ItemGroup>
