--- a/analyzers/v2-abstractions/v2-abstractions.csproj
+++ b/analyzers/v2-abstractions/v2-abstractions.csproj
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="xunit.abstractions" Version="2.0.3" />
-    <PackageReference Include="xunit.analyzers" Version="1.2.0-pre.23" />
+    <PackageReference Include="xunit.analyzers" Version="$(XunitAnalyzersVersion)" />
   </ItemGroup>
 
 </Project>
