--- a/analyzers/v2-execution/v2-execution.csproj
+++ b/analyzers/v2-execution/v2-execution.csproj
@@ -10,8 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit.analyzers" Version="1.2.0-pre.23" />
-    <PackageReference Include="xunit.extensibility.execution" Version="2.5.0-pre.25" />
+    <PackageReference Include="xunit.analyzers" Version="$(XunitAnalyzersVersion)" />
+    <PackageReference Include="xunit.extensibility.execution" Version="$(XunitV2Version)" />
   </ItemGroup>
 
 </Project>
