--- a/analyzers/v3-full/v3-full.csproj
+++ b/analyzers/v3-full/v3-full.csproj
@@ -11,8 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit.analyzers" Version="1.2.0-pre.23" />
-    <PackageReference Include="xunit.v3" Version="0.1.1-pre.241" />
+    <PackageReference Include="xunit.analyzers" Version="$(XunitAnalyzersVersion)" />
+    <PackageReference Include="xunit.v3" Version="$(XunitV3Version)" />
   </ItemGroup>
 
 </Project>
