--- a/msbuild/v2x_net452/v2x_net452.csproj
+++ b/msbuild/v2x_net452/v2x_net452.csproj
@@ -31,8 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.5.0-pre.22" />
-    <PackageReference Include="xunit.runner.msbuild" Version="2.5.0-pre.22">
+    <PackageReference Include="xunit" Version="$(XunitV2Version)" />
+    <PackageReference Include="xunit.runner.msbuild" Version="$(XunitV2Version)">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
