--- a/test-explorer/Directory.Build.props
+++ b/test-explorer/Directory.Build.props
@@ -1,4 +1,5 @@
 <Project>
+  <Import Project="..\Directory.Build.props" />
 
   <PropertyGroup>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
