--- a/test-explorer/v1x_net462/v1x_net462.csproj
+++ b/test-explorer/v1x_net462/v1x_net462.csproj
@@ -12,7 +12,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
     <PackageReference Include="xunit" Version="1.9.2" />
     <PackageReference Include="xunit.extensions" Version="1.9.2" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.0-pre.15">
+    <PackageReference Include="xunit.runner.visualstudio" Version="$(XunitRunnerVSVersion)">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
