--- a/test-explorer/v2x_net462_FSharp/v2x_net462_FSharp.fsproj
+++ b/test-explorer/v2x_net462_FSharp/v2x_net462_FSharp.fsproj
@@ -15,8 +15,8 @@
   <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="4.7.2" />
     <PackageReference Update="System.ValueTuple" Version="4.5.0" />
-    <PackageReference Include="xunit" Version="2.5.0-pre.22" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.0-pre.15">
+    <PackageReference Include="xunit" Version="$(XunitV2Version)" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="$(XunitRunnerVSVersion)">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
