--- a/test-explorer/v2x_net462_OldProject/v2x_net462_OldProject.csproj
+++ b/test-explorer/v2x_net462_OldProject/v2x_net462_OldProject.csproj
@@ -33,8 +33,8 @@
     <Content Include="..\xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.5.0-pre.22" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.0-pre.15">
+    <PackageReference Include="xunit" Version="$(XunitV2Version)" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="$(XunitRunnerVSVersion)">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
