Update the sample for xUnit1019 for ITheoryDataRow

--- a/analyzers/v2-abstractions/v2-abstractions.csproj
+++ b/analyzers/v2-abstractions/v2-abstractions.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <DefineConstants>$(DefineConstants);XUNIT_V2</DefineConstants>
     <NoWarn>$(NoWarn);IDE1006</NoWarn>
     <TargetFrameworks>net452;netcoreapp3.1</TargetFrameworks>
   </PropertyGroup>
