--- a/analyzers/v3-full/v3-full.csproj
+++ b/analyzers/v3-full/v3-full.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <DefineConstants>$(DefineConstants);XUNIT_V3</DefineConstants>
-    <Nullable Condition=" '$(TargetFramework)' == 'net6.0' ">enable</Nullable>
+    <LangVersion>10.0</LangVersion>
+    <Nullable>enable</Nullable>
     <TargetFrameworks>net472;net6.0</TargetFrameworks>
   </PropertyGroup>
 
