--- a/analyzers/v3-full/v3-full.csproj
+++ b/analyzers/v3-full/v3-full.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <DefineConstants>$(DefineConstants);XUNIT_V3</DefineConstants>
+    <DefineConstants>$(DefineConstants);XUNIT_V3;XUNIT_EXTENSIBILITY</DefineConstants>
     <LangVersion>10.0</LangVersion>
     <Nullable>enable</Nullable>
     <TargetFrameworks>net472;net6.0</TargetFrameworks>
@@ -10,6 +10,7 @@
   <ItemGroup>
     <Compile Include="..\common\1xxx_Usage\*.cs" LinkBase="1xxx_Usage" />
     <Compile Include="..\common\2xxx_Assertions\*.cs" LinkBase="2xxx_Assertions" />
+    <Compile Include="..\common\3xxx_Extensibility\*.cs" LinkBase="3xxx_Extensibility" />
   </ItemGroup>
 
   <ItemGroup>
