Integration tests for xunit/xunit.analyzers#166

--- a/analyzers/.editorconfig
+++ b/analyzers/.editorconfig
@@ -36,6 +36,10 @@ dotnet_diagnostic.xUnit1033.severity = warning
 dotnet_diagnostic.xUnit1034.severity = warning
 dotnet_diagnostic.xUnit1035.severity = warning
 dotnet_diagnostic.xUnit1036.severity = warning
+dotnet_diagnostic.xUnit1037.severity = warning
+dotnet_diagnostic.xUnit1038.severity = warning
+dotnet_diagnostic.xUnit1039.severity = warning
+dotnet_diagnostic.xUnit1040.severity = warning
 
 dotnet_diagnostic.xUnit2000.severity = warning
 dotnet_diagnostic.xUnit2001.severity = warning
