--- a/analyzers/.editorconfig
+++ b/analyzers/.editorconfig
@@ -63,6 +63,7 @@ dotnet_diagnostic.xUnit2018.severity = warning
 dotnet_diagnostic.xUnit2020.severity = warning
 dotnet_diagnostic.xUnit2021.severity = warning
 dotnet_diagnostic.xUnit2022.severity = warning
+dotnet_diagnostic.xUnit2023.severity = warning
 
 dotnet_diagnostic.xUnit3000.severity = warning
 dotnet_diagnostic.xUnit3001.severity = warning
